--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,85 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+body{
+    margin: 0px;
+    box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+/* CONTAINER STYLES */
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+.container{
+    max-width: 1280px;
+    padding: 80px 20px;
+    margin: auto;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.card-container{
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    flex-wrap: wrap;
+    align-items: center;
+    max-width: 1280px;
+    padding: 80px 20px;
+    margin: auto; 
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+
+/* BUTTON STYLES */
+.btn-primary{
+    font-weight: bold;
+    background-color: #f7d547;
+    box-shadow: 0 10px 25px #f7d54780;
+    color: white;
+    border: none;
+    border-radius: 9px;
+    padding: 1em 1.5em;
+    text-decoration: none;
+    cursor: pointer;
+    transition: .3s;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.btn-primary:hover{
+    background-color: #49ccf9;
+    box-shadow: 0 10px 25px rgb(73 204 249 / 30%);
+    text-decoration: none;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.btn-secondary{
+    font-weight: bold;
+    background-color: #fd71af;
+    box-shadow: 0 10px 25px rgb(253 113 175 / 30%);
+    color: white;
+    border: none;
+    border-radius: 9px;
+    padding: 1em 1.5em;
+    text-decoration: none;
+    transition: .3s;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.btn-secondary:hover{
+    background-color: #7b68ee;
+    box-shadow: 0 10px 25px rgb(123 104 238 / 50%);
 }
+
+/* END BUTTON STYLES */
+
+/* FORM STYLES */
+.form-primary{
+    display:flex;
+    flex-direction: column;
+    max-width: 600px;
+    margin:0 auto;
+    padding: 40px 20px;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+}
+
+.form-primary input{
+    margin-bottom: 20px;
+    padding: 10px 0px;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid #f7d547;
+}
+/* END FORM STYLES */
