--- a/src/components/categoryCard/styles.module.css
+++ b/src/components/categoryCard/styles.module.css
@@ -4,9 +4,9 @@
     justify-content: center;
     align-items: center;
     min-height: 250px;
-    width: 250px;
+    width: 280px;
     padding: 20px;
-    box-shadow: 0 10px 25px #f7d54780;
+    box-shadow: -5px 10px 20px rgba(0, 0, 0, 0.2);
     border-radius: 16px;
     cursor: pointer;
     transition: .5s;
