--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,7 @@ body{
     margin: 0px;
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
+    position: relative;
 }
 
 
@@ -11,12 +12,13 @@ body{
     max-width: 1280px;
     padding: 80px 20px;
     margin: auto;
+
 }
 
 .card-container{
     display: flex;
     justify-content: center;
-    gap: 50px;
+    gap: 100px;
     flex-wrap: wrap;
     align-items: center;
     max-width: 1280px;
@@ -62,6 +64,18 @@ body{
     box-shadow: 0 10px 25px rgb(123 104 238 / 50%);
 }
 
+.btn-close{
+    color: #7c828d;
+    font-size: 22px;
+    font-weight: bold;
+    transition: .3s;
+}
+
+.btn-close:hover{
+    color: red;
+    cursor: pointer;
+}
+
 /* END BUTTON STYLES */
 
 /* FORM STYLES */
@@ -70,7 +84,7 @@ body{
     flex-direction: column;
     max-width: 600px;
     margin:0 auto;
-    padding: 40px 20px;
+    padding: 30px 20px;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
 }
